# repi

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  bug.json  cli.py  config.example.json  config.json  docker-compose.yml  pyproject.toml  sources.md
.github/workflows/: docker.yml  tests.yml
analysis/: blast.py  scorer.py
data/: log_cache.json  lograg.db
db/: schema.sql
db/migrations/: 001_init.sql  002_watchers.sql  003_clarification.sql
diff/: mapper.py  types.py
docker/: config.docker.json  entrypoint.sh
docs/: dataset3-regression.md  two-phase-scan.md
eval/: .gitignore  README.md  check_judge.py  criteria.py  eval_agent.py  judge.py  ragas_eval.py  ragas_results.json  ragas_results_cross.json  ragas_results_loghub.json  results.py  run_evals.py  run_multi_model.py  seed_ragas.py
eval/dataset_1_cascading_inventory_migration/: README.md  expected.json  seed.py
eval/dataset_2_insufficient_logging/: README.md  expected.json  seed.py
eval/dataset_3_jwt_key_rotation_noise/: README.md  expected.json  seed.py
eval/dataset_4_discord_gateway_cascade/: expected.json  seed.py  simulate_live.py
eval/results/: deepseek_v4_flash.json  deepseek_v4_flash_d2.json  deepseek_v4_flash_d3.json  deepseek_v4_flash_d4.json  dry_run_mistral.json  gemini_2.5_flash_lite.json  gemini_2.5_flash_lite_v2.json  gemini_25_flash_lite.json  gemini_flash_lite_d2.json  gemini_flash_lite_d3.json  gemini_flash_lite_d4.json  mistral_self.json  mistral_small_2603.json  qwen3.5_flash.json  qwen_flash_d2.json  qwen_flash_d3.json  qwen_flash_d4.json  qwen_qwen35_flash.json  zai_glm47_flash.json
evaluation/: dataset.json  metrics.py  runner.py
extractor/: analyzer.py  queries.py  types.py
graph/: builder.py  store.py
impact_engine/: cli.py
impact_engine/analysis/: blast.py  scorer.py
impact_engine/diff/: mapper.py  parser.py  types.py
impact_engine/extractor/: analyzer.py
impact_engine/graph/: builder.py  store.py
lograg/: cli.py
lograg/core/: config.py  pipeline.py
lograg/ingest/: chunker.py  parser.py
lograg/llm/: analyzer.py  prompts.py  schema.py
lograg/retrieval/: bm25.py  dense.py  reranker.py  rrf.py
lograg/storage/: db.py
repi/: api.py  cli.py  worker.py
repi/api/: __init__.py  chat.py  config.py  conversations.py  guards.py  ingest.py  investigate.py  leaderboard.py  limiter.py  projects.py  schemas.py  watchers.py
repi/core/: cache.py  config.py  container.py  dates.py
repi/embeddings/: __init__.py  base.py  bge_backend.py  factory.py  fastembed_backend.py  nomic_backend.py  sentence_transformers_backend.py  torch_backend.py
repi/ingestion/: log_chunker.py  log_ingestor.py  log_parser.py
repi/intent/: resolver.py
repi/investigation/: compiler.py  react_loop.py  sanitize.py  schema.py  state.py  store.py  sweep.py  tools.py
repi/llm/: adapters.py  factory.py  json_utils.py
repi/models/: filters.py  schema.py
scratch/: test_resolver.py
scripts/: seeding.py  verify_3b.py
tests/: test_cli_config.py  test_cli_init_flags.py  test_cli_version_doctor.py  test_config_isolation.py  test_config_path_resolution.py  test_tools.py
utils/: ids.py  walker.py
web/: .env.example  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
(+129 files in other folders)
