[tool.poetry]
name = "lograg"
version = "0.1.0"
description = "Log ingestion and retrieval-augmented generation for log analysis"
authors = ["Varun Singh <varun7singh10@gmail.com>"]
readme = "README.md"
packages = [{include = "lograg"}]

[tool.poetry.dependencies]
python = "3.11.9"
typer = {extras = ["all"], version = "^0.12.3"}
rich = "^13.7.1"
rank-bm25 = "^0.2.2"
sentence-transformers = "^3.0.1"
faiss-cpu = "^1.8.0.post1"
llama-index = "^0.10.50"
pydantic = "^2.7.4"
sqlalchemy = "^2.0.31"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"
numpy = "^1.26.4"
sqlmodel = "^0.0.38"
pgvector = "^0.4.2"
asyncpg = "^0.31.0"
fastapi = "^0.136.1"
uvicorn = "^0.46.0"

[tool.poetry.scripts]
lograg = "lograg.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
