[project]
name = "repi"
version = "0.1.0"
description = "repi: Log Investigation Engine"
readme = "README.md"
requires-python = ">=3.11,<4"
authors = [
    { name = "Varun Singh", email = "varun7singh10@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0,<0.112.0",
    "uvicorn[standard]>=0.30.1,<0.31.0",
    "python-multipart>=0.0.9,<0.0.10",
    "rich>=13.7.1,<14",
    "sentence-transformers>=3.0.1,<4",
    "torch>=2.0,<3",
    "pydantic>=2.7.4,<3",
    "sqlalchemy>=2.0.31,<3",
    "numpy>=1.26.4,<2",
    "sqlmodel>=0.0.38,<0.0.39",
    "pgvector>=0.4.2,<0.5",
    "asyncpg>=0.31.0,<0.32",
    "redis>=5.0.4,<6",
    "pydantic-settings>=2.14.0,<3",
    "click==8.1.7",
    "typer>=0.12.0,<0.13",
    "watchfiles>=0.21.0,<0.22",
]

[project.scripts]
repi = "repi.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["repi"]

# repi runs on CPU only — pull torch from the PyTorch CPU index so we don't
# drag ~4 GB of CUDA libraries (nvidia/*, triton) into the runtime image.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
